Se agregó el box shadow en menu Movil y se quito un padding en la foto

--- a/wp-content/themes/TorresP/css/responsive.css
+++ b/wp-content/themes/TorresP/css/responsive.css
@@ -186,6 +186,9 @@
 
   .menu-movil{
     display: block;
+    -webkit-box-shadow: 0px 10px 21px -6px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 10px 21px -6px rgba(0,0,0,0.75);
+box-shadow: 0px 10px 21px -6px rgba(0,0,0,0.75);
   }
 
 
@@ -200,7 +203,8 @@
 
 
 .seccion-header {
-  padding-top: 40px;
+  padding-top: 0px;
+  margin-top: 40px;
 }
 
 
