Se cambio la imagen y titulo del tema

--- a/wp-content/themes/TorresP/style.css
+++ b/wp-content/themes/TorresP/style.css
@@ -1,5 +1,5 @@
 /*
-	Theme Name: CIENCIARIO
+	Theme Name: CARLOS TORRES P
 	Theme URI: http://html5blank.com
 	Description: HTML5 Blank WordPress Theme
 	Version: 1.4.3
