--- a/wp-content/themes/TorresP/style.css
+++ b/wp-content/themes/TorresP/style.css
@@ -1032,8 +1032,38 @@ svg {
   height: 100%;
 }
 
+/*------------------------------------*\
+   SECCIÓN GENERAL
+\*------------------------------------*/ 
+
+  .seccion-general{
+    width: 100%;
+    max-width: 1920px;
+    height: auto;
+    background: #FFF;
+    margin: 0 auto;
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
 
 
+
+/*------------------------------------*\
+   PROPUESTAS: formulario;
+\*------------------------------------*/ 
+
+  .formulario-seccion{
+    max-width: 1200px;
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+
+  }
+
+    .formulario-seccion h2{
+      font-family: "Gotham-Medium" !important;
+      font-size: 18px !important;
+    }
 
 
 /*------------------------------------*\
