--- a/wp-content/themes/TorresP/style.css
+++ b/wp-content/themes/TorresP/style.css
@@ -1073,6 +1073,39 @@ svg {
     }
 
 
+
+.contenedorMensajeCorreo{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background: rgba(0,0,0,0.8);
+  z-index: 9999;
+  top: 0;
+  left: 0;
+  display: none;
+}
+
+
+.contenedorMensajeCorreo > .msj{
+  position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 300px;
+    height:auto;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    z-index: 1;
+    background-color: #FFF; 
+    font-family: "Gotham-Medium";
+  font-size: 18px;
+  line-height: 18px;
+  color: #777;
+  text-align: center;
+   padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+
 /*------------------------------------*\
     PRELOADER GIF ANIMACION
 \*------------------------------------*/
