--- a/wp-content/themes/TorresP/style.css
+++ b/wp-content/themes/TorresP/style.css
@@ -182,6 +182,12 @@ input:focus {
   height: 1080px;
   position: relative;
 }
+
+.seccion-header-inside{
+  width: 100%;
+  height: 600px !important;
+  position: relative;
+}
  
 
 .imagen_portada{
@@ -1121,6 +1127,7 @@ svg {
 .Textos-seccion > .titulo{
   width: 100%;
   height: auto;
+  font-size: 30px;
   margin-bottom: 30px;
   text-align: center;
 }
